# CHIMERA

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Executable_Checklist.txt  README.md  Test_File.txt  chimera_core.py  clean_digits.py  conftest.py  data_reader.py  db.py  expr_eval.py  fitting.py  latexify.py  main.py  online_ui.py  parser.py  plotting.py  project_io.py  py_to_exe.txt  pyproject.toml
.github/workflows/: ci.yml
.pylint.d/: main1.stats  parser1.stats
img/: Colours.txt
src/: clean_digits.py  data_reader.py  latexify.py  parser.py
src/.pylint.d/: data_reader1.stats
tests/: test_db.py  test_expr_eval.py  test_fitting.py  test_flows.py  test_math_2_latex.py  test_parser.py  test_process_params.py  test_project_roundtrip.py  test_read_file.py
