[project]
name = "chimera"
version = "1.7.1"
description = "CHIMERA — a curve fitting and plotting desktop application."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "matplotlib",
    "numpy",
    "odrpack>=0.6.1",
    "openpyxl",
    "pandas",
    "pillow",
    "pymongo",
    "pyperclip",
    "requests",
]

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
    "mypy>=1.11",
    "pandas-stubs",
    "pre-commit>=3.7",
    "pytest>=8",
    "ruff>=0.6",
    "types-requests",
]

# CHIMERA is a single-file application, not an installable package.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Start from a pragmatic baseline for this legacy single-file app.
# pyflakes (F) catches real bugs (undefined names, unused imports); the rest
# are safe hygiene rules. Stylistic rules that would require churning the whole
# 4.8k-line file are deliberately left off for now and can be tightened later.
select = ["E", "F", "W", "I"]
ignore = [
    "E501", # line-too-long: legacy file has many long lines
    "E741", # ambiguous variable names (l, I, O): used throughout legacy code
    "E701", # multiple statements on one line: pervasive legacy one-liner style
    "E721", # type comparison with '==': legacy read_file uses out == float/str
]

[tool.ruff.lint.per-file-ignores]
# Tests reach into main.py's globals; that's expected.
"tests/*" = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
# The legacy GUI module is untyped; type-check it leniently for now and
# enforce stricter typing on newly added code (e.g. tests, future modules).

# The legacy GUI modules reference each other's dynamically-set attributes and
# are untyped; type-check them leniently for now.
[[tool.mypy.overrides]]
module = ["main", "online_ui", "project_io"]
ignore_errors = true

# The extracted pure modules are fully typed; require annotations there.
[[tool.mypy.overrides]]
module = ["chimera_core", "db", "expr_eval", "fitting"]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
